5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4007/executions/1635_2446.log
== TEST (2019-04-14 15:53:40) 
-- CODE:
num = int(input("digite uma senha (6 digitos): "))
d1 = num // 100000
d2 = num // 10000 % 10
d3 = num // 1000 % 10
d4 = num //100 % 10
d5 = num // 10 % 10
d6 = num // % 10

if (d2 + d4 + d6) % (d1 + d3 + d4) != 0:
	msg = "senha invalida"
else:
	msg = "acesso liberado"

print(msg)

print(msg) 


-- ERROR:
File "XXXX", line 7
    d6 = num // % 10
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:39:56) 
-- CODE:
num = int(input("digite uma senha (6 digitos): "))
d1 = num // 100000
d2 = num // 10000 % 10
d3 = num // 1000 % 10
d4 = num //100 % 10
d5 = num // 10 % 10
d6 = num // % 10

if (d2 + d4 + d6) % (d1 + d3 + d4) != 0:
	msg = "senha invalida"
else:
	msg = "acesso liberado"

msg = "acesso" 
print(msg) 


-- ERROR:
File "XXXX", line 7
    d6 = num // % 10
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:40:12) 
-- CODE:
num = int(input("digite uma senha (6 digitos): "))
d1 = num // 100000
d2 = num // 10000 % 10
d3 = num // 1000 % 10
d4 = num //100 % 10
d5 = num // 10 % 10
d6 = num % 10

if (d2 + d4 + d6) % (d1 + d3 + d4) != 0:
	msg = "senha invalida"
else:
	msg = "acesso liberado"

msg = "acesso" 
print(msg) 


-- OUTPUT:
acesso
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:41:13) 
-- CODE:
num = int(input("digite uma senha (6 digitos): "))
d1 = num // 100000
d2 = num // 10000 % 10
d3 = num // 1000 % 10
d4 = num //100 % 10
d5 = num // 10 % 10
d6 = num % 10

if (d2 + d4 + d6) % (d1 + d3 + d4) != 0:
	msg = "senha invalida"
else:
	msg = "acesso liberado"


print(msg) 


-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:41:29) 
-- CODE:
num = int(input("digite uma senha (6 digitos): "))
d1 = num // 100000
d2 = num // 10000 % 10
d3 = num // 1000 % 10
d4 = num //100 % 10
d5 = num // 10 % 10
d6 = num % 10

if (d2 + d4 + d6) % (d1 + d3 + d4) != 0:
	msg = "senha invalida"
else:
	msg = "acesso liberado"


print(msg) 


-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 19:41:51) 
-- CODE:
num = int(input("digite uma senha (6 digitos): "))
d1 = num // 100000
d2 = num // 10000 % 10
d3 = num // 1000 % 10
d4 = num //100 % 10
d5 = num // 10 % 10
d6 = num % 10

if (d2 + d4 + d6) % (d1 + d3 + d4) != 0:
	msg = "senha invalida"
else:
	msg = "acesso liberado"


print(msg) 


-- EXECUTION TIME:
0.150991
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha invalida
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:08:54) 
-- CODE:
num = int(input("digite uma senha (6 digitos): "))
d1 = num // 100000
d2 = (num // 10000) % 100
d3 = (num // 1000) % 100
d4 = (num //100) % 10
d5 = (num // 10) % 10
d6 = num % 10

if (d2 + d4 + d6) % (d1 + d3 + d4) != 0:
	msg = "senha invalida"
else:
	msg = "acesso liberado"


print(msg) 


-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:09:15) 
-- CODE:
num = int(input("digite uma senha (6 digitos): "))
d1 = num // 100000
d2 = (num // 10000) % 100
d3 = (num // 1000) % 100
d4 = (num //100) % 10
d5 = (num // 10) % 10
d6 = num % 10

if (d2 + d4 + d6) % (d1 + d3 + d4) != 0:
	msg = "senha invalida"
else:
	msg = "acesso liberado"


print(msg) 


-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:09:43) 
-- CODE:
num = int(input("digite uma senha (6 digitos): "))
d1 = num // 100000
d2 = (num // 10000) % 10
d3 = (num // 1000) % 10
d4 = (num //100) % 10
d5 = (num // 10) % 10
d6 = num % 10

if (d2 + d4 + d6) % (d1 + d3 + d4) != 0:
	msg = "senha invalida"
else:
	msg = "acesso liberado"


print(msg) 


-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 20:11:56) 
-- CODE:
num = int(input("digite uma senha (6 digitos): "))
d1 = num // 100000
d2 = (num // 10000) % 10
d3 = (num // 1000) % 10
d4 = (num //100) % 10
d5 = (num // 10) % 10
d6 = num % 10

if (d2 + d4 + d6) % (d1 + d3 + d4) != 0:
	msg = "senha invalida"
else:
	msg = "acesso liberado"


print(msg) 


-- EXECUTION TIME:
0.127938
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha invalida
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 20:12:57) 
-- CODE:
num = int(input("digite uma senha (6 digitos): "))
d1 = num // 100000
d2 = (num // 10000) % 10
d3 = (num // 1000) % 10
d4 = (num //100) % 10
d5 = (num // 10) % 10
d6 = num % 10

if (d2 + d4 + d6) % (d1 + d3 + d4) != 0:
	msg = "acesso liberado"
else:
	msg = "senha invalida"


print(msg) 


-- EXECUTION TIME:
0.162725
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
acesso liberado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:13:03) 
-- CODE:
num = int(input("digite uma senha (6 digitos): "))
d1 = num // 100000
d2 = (num // 10000) % 10
d3 = (num // 1000) % 10
d4 = (num //100) % 10
d5 = (num // 10) % 10
d6 = num % 10

if (d2 + d4 + d6) % (d1 + d3 + d4) != 0:
	msg = "acesso liberado"
else:
	msg = "senha invalida"


print(msg) 


-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:13:27) 
-- CODE:
num = int(input("digite uma senha (6 digitos): "))
d1 = num // 100000
d2 = (num // 10000) % 10
d3 = (num // 1000) % 10
d4 = (num //100) % 10
d5 = (num // 10) % 10
d6 = num % 10

if (d2 + d4 + d6) % (d1 + d3 + d4) != 0:
	msg = "acesso liberado"
else:
	msg = "senha invalida"


print(msg) 


-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:15:44) 
-- CODE:
num = int(input("digite uma senha (6 digitos): "))
d1 = num // 100000
d2 = (num // 10000) % 10
d3 = (num // 1000) % 10
d4 = (num //100) % 10
d5 = (num // 10) % 10
d6 = num % 10

if (d2 + d4 + d6) % (d1 + d3 + d5) != 0:
	msg = "acesso liberado"
else:
	msg = "senha invalida"


print(msg) 


-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:15:58) 
-- CODE:
num = int(input("digite uma senha (6 digitos): "))
d1 = num // 100000
d2 = (num // 10000) % 10
d3 = (num // 1000) % 10
d4 = (num //100) % 10
d5 = (num // 10) % 10
d6 = num % 10

if (d2 + d4 + d6) % (d1 + d3 + d5) != 0:
	msg = "acesso liberado"
else:
	msg = "senha invalida"


print(msg) 


-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:16:44) 
-- CODE:
num = int(input("digite uma senha (6 digitos): "))
d1 = num // 100000
d2 = (num // 10000) % 10
d3 = (num // 1000) % 10
d4 = (num //100) % 10
d5 = (num // 10) % 10
d6 = num % 10

if (d2 + d4 + d6) % (d1 + d3 + d5) != 0:
	msg = "senha invalida"
else:
	msg = "acesso liberado"


print(msg) 


-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:16:54) 
-- CODE:
num = int(input("digite uma senha (6 digitos): "))
d1 = num // 100000
d2 = (num // 10000) % 10
d3 = (num // 1000) % 10
d4 = (num //100) % 10
d5 = (num // 10) % 10
d6 = num % 10

if (d2 + d4 + d6) % (d1 + d3 + d5) != 0:
	msg = "senha invalida"
else:
	msg = "acesso liberado"


print(msg) 


-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 20:17:03) 
-- CODE:
num = int(input("digite uma senha (6 digitos): "))
d1 = num // 100000
d2 = (num // 10000) % 10
d3 = (num // 1000) % 10
d4 = (num //100) % 10
d5 = (num // 10) % 10
d6 = num % 10

if (d2 + d4 + d6) % (d1 + d3 + d5) != 0:
	msg = "senha invalida"
else:
	msg = "acesso liberado"


print(msg) 


-- EXECUTION TIME:
0.171278
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
